--- a/project_proposal/sections/preamble.tex
+++ b/project_proposal/sections/preamble.tex
@@ -17,19 +17,11 @@
 \date{\today}
 \author{
     % Authors
-    \textbf{Author:}\\
-    Whiffing, James\\
+    \textbf{Author:} James Whiffing, \textbf{Supervisor:}  Christopher Clarke\\
     Department of Computer Science\\
     University of Bath\\
     Bath, BA2 7AY \\
-    \textit{jw2304@bath.ac.uk} \\
-    \and
-    \textbf{Supervisor:}\\
-    Clarke, Christopher\\
-    Department of Computer Science\\
-    University of Bath\\
-    Bath, BA2 7AY \\
-    \textit{cjc234@bath.ac.uk} \\
+    \textit{\{jw2304, cjc234\}@bath.ac.uk}
 }
 
 \maketitle
