--- a/project_proposal/styling/report_dependencies.sty
+++ b/project_proposal/styling/report_dependencies.sty
@@ -60,7 +60,7 @@
 %% Header/Footer Setup
 \lhead{\leftmark}
 \chead{}
-\rhead{CM50265 - CW2 Group Report}
+\rhead{CM50175 - Project Proposal}
 \lfoot{}
 \cfoot{}
 \rfoot{\thepage}
@@ -70,7 +70,7 @@
 %%
 \newcommand*{\urlprefix}{Available from: }
 \newcommand*{\urldateprefix}{Accessed }
-\bibliographystyle{bath_harvard_reference_styling/bathx}
+\bibliographystyle{styling/bathx}
 % \pagestyle{headings}
 \fussy
 
