Moar notes and plan

--- a/project_proposal/CM50175_project_proposal.tex
+++ b/project_proposal/CM50175_project_proposal.tex
@@ -22,6 +22,6 @@
     %TC:endignore
     \normalsize
 
-    \include{sections/appendix.tex}
+    % \include{sections/appendix.tex}
 
 \end{document}
