--- a/project_proposal/sections/preamble.tex
+++ b/project_proposal/sections/preamble.tex
@@ -17,9 +17,10 @@
 \date{\today}
 \author{
     % Authors
-    \textbf{Author:} James Whiffing, \textbf{Supervisor:}  Christopher Clarke\\
+    \textbf{Author:} Whiffing, James\\
+    \textbf{Supervisor:} Clarke, Christopher\\
     Department of Computer Science\\
-    University of Bath\\
+    University of Bath,\\
     Bath, BA2 7AY \\
     \textit{\{jw2304, cjc234\}@bath.ac.uk}
 }
@@ -39,14 +40,14 @@
 \tableofcontents
 \clearpage
 \newpage
-\addcontentsline{toc}{section}{\listfigurename}
-\listoffigures
-\clearpage
-\newpage
-\addcontentsline{toc}{section}{\listtablename}
-\listoftables
-\clearpage
-\newpage
+% \addcontentsline{toc}{section}{\listfigurename}
+% \listoffigures
+% \clearpage
+% \newpage
+% \addcontentsline{toc}{section}{\listtablename}
+% \listoftables
+% \clearpage
+% \newpage
 
 % Tell TexCount to start counting words again
 %TC:endignore
