--- a/project_proposal/sections/project_plan.tex
+++ b/project_proposal/sections/project_plan.tex
@@ -1,4 +1,55 @@
 \section{Project Plan}
 
+% Agile approach, loose deadlines, but ideally more frequent iterations
+%   Slow sections on research and writing, but can start development alongside these sections, and once tracking / gesture recognition sorted can start developing frequent prototypes for interface for testing
+
+% What items can be dropped if timeline an issue?
+% What are the deadlines set for the milestones?
+% When can each item be started, what is being worked on in parallel?
+
+\begin{notes}
+    \begin{enumerate}
+        \item \label{itm:research} Research \& Design
+            \begin{enumerate}
+                \item \label{itm:lit_review_draft} Literature Review \textit{- 1\textsuperscript{st} Draft}
+                \item \label{itm:tracking_design} Head/Gaze Tracking research and design 
+                \item \label{itm:gesture_design} Gesture Recognition research and design 
+                \item \label{itm:interface_design} Initial Designs For 3D Interface
+            \end{enumerate} 
+        \item \label{itm:development} Development
+            \begin{enumerate}
+                \item \label{itm:head_tracking} Head Tracking
+                    % Tracking head to determine relative position of the phone
+                \item \label{itm:gaze_tracking} Gaze Tracking
+                    % Tracking user gaze (map to point/region on screen)
+                \item \label{itm:gesture_recognition} Gesture Recognition
+                    % Recognising specific movements of phone + gaze location
+                \item \label{itm:interface} Interface Prototyping
+                    % Developing prototype interfaces on a mobile device for evaluation
+            \end{enumerate}
+        \item \label{itm:testing} Testing \& Evaluation
+            \begin{enumerate}
+                \item \label{itm:performance} Evaluating Tracking Performance \\
+                    Raw Performance (how accurate is it)\\
+                    Comparison to existing techniques (taking note of difference in approach, may not be 1-1 evaluation possible)
+                \item \label{itm:usability} Usability Study
+            \end{enumerate}
+        \item \label{itm:report} Writing the Report
+            \begin{enumerate}
+                \item \label{itm:lit_review_final} Literature Review \textit{- Final Draft}
+                \item \label{itm:design_write} Design Write-up
+                    % Designs and additional research 
+                \item \label{itm:dev_write} Development Write-up
+                    % Development (successes, failures, etc...) 
+                \item \label{itm:eval_write} Evaluation Write-up
+                    % Results, Testing, Evaluation
+                \item \label{itm:conclusion_write} Conclusions \& Further Work
+                    % Changes made, was it a success, how could this be used and extended.
+                \item \label{itm:abstract_and_intro_write} Abstract \& Introduction
+                    % Summary of the paper, and introduction to what the paper will discuss
+            \end{enumerate}
+    \end{enumerate}
+\end{notes}
+
 % Gantt Chart showing plausible deadlines and milestones
 %   Not too specific and fairly broad (maybe overlapping sections to account for unknown time for deliverables)
