--- a/project_proposal/styling/report_dependencies.sty
+++ b/project_proposal/styling/report_dependencies.sty
@@ -21,7 +21,8 @@
 \usepackage{microtype}      % microtypography
 \usepackage{titling}
 \usepackage{array}
-
+\usepackage{enumitem}
+\setlist[enumerate]{label*=\arabic*.}
 % Path to figures
 \graphicspath{{figures/}}
 
