--- a/project_proposal/sections/project_deliverables.tex
+++ b/project_proposal/sections/project_deliverables.tex
@@ -1,9 +1,28 @@
-\section{Deliverables}
+\section{Objectives}
 
-% What are we planning to make
-%   A tool/lib to track the phone's movement around the user using IMU and AR camera tracking (Potentially some ML here?)
-%   A tool/lib utilising the above to parse movement/positions as gestures (Potentially some ML here?)
-%   Creating a prototype interface to utilise the gesture tool/lib to allow user to interact with their mobile device via head gestures.
-%   Possibly extending the interaction to PC/laptop monitor/display
-%   Possibly extending with additional gestures beyond head/face (time permitting)
-%   User study to evaluate the interface and compare with other approaches (and traditional touch interfaces)
+\subsection{Deliverables}
+\begin{enumerate}
+    \item An interface for an SHD which can be interacted with via head, gaze, and touch gestures.
+    \item A report detailing the research, design, development, and evaluation of the interface.
+\end{enumerate}
+
+\subsection{Requirements}
+% What makes this a success
+These are the criteria with which the project success shall be evaluated:
+\begin{enumerate}
+    \item Must have an interface that can be evaluated (e.g. something that a user can interact with).
+        \begin{enumerate}
+            \item Could mock the interface (e.g. not a proper smartphone launcher, but an app/website representing a smartphone launcher).
+            \item Should evaluate the interface with a usability study.
+            \item Should permit user's to interact with device one-handed (e.g. head/gaze gestures should extend user reach while holding device with one hand).
+            \item Could extend the display with 3\textsuperscript{rd} dimension, adding depth to the interface from user's perspective.
+        \end{enumerate}
+    \item Must have working head tracking.
+        \begin{enumerate}
+            \item Should evaluate against similar techniques/systems
+        \end{enumerate}
+    \item Should have working Gaze tracking.
+        \begin{enumerate}
+            \item Should evaluate against similar techniques/systems
+        \end{enumerate}
+\end{enumerate}
