--- a/project_proposal/sections/project_resources.tex
+++ b/project_proposal/sections/project_resources.tex
@@ -3,3 +3,20 @@
 % Research required (AR, head-tracking, gaze detection)
 % Hardware/Software (Mobile devices: phone, tablet; android dev kit)
 % People (experts / user study)
+\subsection{Research}
+\begin{description}
+    \item[Institutional Paper Access] In order to perform research into head/eye-tracking and gesture recognition techniques, access to papers in this field will be required. Through the university library/VPN/log-in, access to relevant papers should not be an issue.
+\end{description}
+
+\subsection{Hardware / Software}
+\begin{description}
+    \item[Handheld Smart Devices] Android smartphones should already be available, however if study is to evaluate interface on iPhone devices as-well, then an iPhone may be required.\\
+        If the study is also required to venture into the world of tablets, a tablet may also be required.
+    \item[Mobile App Development Software] This should be straight-forward for android devices as I should be able to obtain the Android studio without issue, but for iPhone / cross-platform development, I'll need to use Xamarin, as I do not have a MacOS machine.
+\end{description}
+
+\subsection{People}
+\begin{description}
+    \item[Experts/Supervisor] Time may be required from experts in the domains relevant to the project to aid in the development and evaluation of the techniques and interface.
+    \item[Study Participants] Participants will be required for the usability study that should be performed on the interface.
+\end{description}
