--- a/project_proposal/styling/report_dependencies.sty
+++ b/project_proposal/styling/report_dependencies.sty
@@ -69,9 +69,10 @@
 %%
 %% Format definitions for the style
 %%
+\usepackage{natbib}
 \newcommand*{\urlprefix}{Available from: }
 \newcommand*{\urldateprefix}{Accessed }
-\bibliographystyle{styling/bathx}
+\bibliographystyle{styling/bathx.bst}
 % \pagestyle{headings}
 \fussy
 
