--- a/project_proposal/CM50175_project_proposal.tex
+++ b/project_proposal/CM50175_project_proposal.tex
@@ -2,15 +2,15 @@
 \usepackage{styling/report_dependencies} % Bring in all the includes and Latex Utils
 
 \begin{document}
-    \include{sections/preamble.tex}
+    \include{sections/preamble}
 
-    \include{sections/project_description.tex}
+    \include{sections/project_description}
 
-    \include{sections/project_deliverables.tex}
+    \include{sections/project_deliverables}
 
-    \include{sections/project_plan.tex}
+    \include{sections/project_plan}
 
-    \include{sections/project_resources.tex}
+    \include{sections/project_resources}
 
     % References
     \small
