--- a/project_proposal/sections/preamble.tex
+++ b/project_proposal/sections/preamble.tex
@@ -40,14 +40,15 @@
 \tableofcontents
 \clearpage
 \newpage
-% \addcontentsline{toc}{section}{\listfigurename}
-% \listoffigures
-% \clearpage
-% \newpage
-% \addcontentsline{toc}{section}{\listtablename}
-% \listoftables
-% \clearpage
-% \newpage
+
+\addcontentsline{toc}{section}{\listfigurename}
+\listoffigures
+\clearpage
+\newpage
+\addcontentsline{toc}{section}{\listtablename}
+\listoftables
+\clearpage
+\newpage
 
 % Tell TexCount to start counting words again
 %TC:endignore
